--- a/src/CryTraCtor/CryTraCtor.csproj
+++ b/src/CryTraCtor/CryTraCtor.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="KaitaiStruct.Runtime.CSharp" Version="0.10.0" />
       <PackageReference Include="SharpPcap" Version="6.3.0" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     </ItemGroup>
