feat: start implementing known domain detection

--- a/src/CryTraCtor/CryTraCtor.csproj
+++ b/src/CryTraCtor/CryTraCtor.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="PacketParsers\RawToSummaryMapper\" />
-      <Folder Include="PacketParsers\Raw\" />
+      <Folder Include="Packet\RawToSummaryMapper\" />
+      <Folder Include="Packet\Raw\" />
     </ItemGroup>
 
 </Project>
