feat: known domain detection proof of concept

--- a/src/CryTraCtor/CryTraCtor.csproj
+++ b/src/CryTraCtor/CryTraCtor.csproj
@@ -15,7 +15,10 @@
 
     <ItemGroup>
       <Folder Include="Packet\RawToSummaryMapper\" />
+      <Folder Include="Packet\RawToSummaryMapper\Dns\" />
       <Folder Include="Packet\Raw\" />
+      <Folder Include="Packet\Raw\Kaitai\Dns\" />
+      <Folder Include="Packet\Summary\Dns\" />
     </ItemGroup>
 
 </Project>
