--- a/src/CryTraCtor.Business/CryTraCtor.Business.csproj
+++ b/src/CryTraCtor.Business/CryTraCtor.Business.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>CryTraCtor</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,11 +15,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Packet\RawToSummaryMapper\" />
-      <Folder Include="Packet\RawToSummaryMapper\Dns\" />
-      <Folder Include="Packet\Raw\" />
-      <Folder Include="Packet\Raw\Kaitai\Dns\" />
-      <Folder Include="Packet\Summary\Dns\" />
+      <Content Update="App.config">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
