--- a/src/CryTraCtor.Database/appsettings.json
+++ b/src/CryTraCtor.Database/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Server=postgres;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
+        "DefaultConnection": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
     }
 }
