feat: successfully save a file

--- a/src/CryTraCtor.API/appsettings.json
+++ b/src/CryTraCtor.API/appsettings.json
@@ -1,7 +1,5 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
-  },
+  "FileStorageDirectory": "C:\\Users\\Test\\Documents\\bp\\test",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
