--- a/src/CryTraCtor.Business/CryTraCtor.Business.csproj
+++ b/src/CryTraCtor.Business/CryTraCtor.Business.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="KaitaiStruct.Runtime.CSharp" Version="0.10.0" />
       <PackageReference Include="SharpPcap" Version="6.3.0" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
@@ -24,6 +25,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\CryTraCtor.Database\CryTraCtor.Database.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Http.Features">
+        <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.0\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
