--- a/src/CryTraCtor.Database/CryTraCtor.Database.csproj
+++ b/src/CryTraCtor.Database/CryTraCtor.Database.csproj
@@ -31,4 +31,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CryTraCtor.Common\CryTraCtor.Common.csproj" />
+    </ItemGroup>
+
 </Project>
