--- a/src/CryTraCtor.Packet/CryTraCtor.Packet.csproj
+++ b/src/CryTraCtor.Packet/CryTraCtor.Packet.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="SharpPcap" Version="6.3.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CryTraCtor.Common\CryTraCtor.Common.csproj" />
+    </ItemGroup>
+
 </Project>
