--- a/src/CryTraCtor.Business/CryTraCtor.Business.csproj
+++ b/src/CryTraCtor.Business/CryTraCtor.Business.csproj
@@ -17,4 +17,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CsvHelper" Version="31.0.4" />
+    </ItemGroup>
+
 </Project>
