--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
 ﻿services:
   crytractor.api:
     image: crytractor.api
+    container_name: crytractor.api
     build:
-      context: ./src/CryTraCtor.API
+      context: .
       dockerfile: src/CryTraCtor.API/Dockerfile
     ports:
       - "8080:8080"
+    
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
+      FILE_STORAGE_DIRECTORY: ${FILE_STORAGE_DIRECTORY}
     depends_on:
         - postgres
   
@@ -13,8 +18,8 @@
     image: postgres:12.2
     container_name: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
         - "5432:5432"
