--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 #PostgreSQL Configuration
 POSTGRES_HOST="postgres"
 POSTGRES_PORT="5432"
+POSTGRES_HOST_PORT=15432
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgres"
 POSTGRES_DB="postgres"
