--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@
       dockerfile: src/CryTraCtor.API/Dockerfile
     ports:
       - "8080:8080"
-    
+
     environment:
       DATABASE_URL: ${DATABASE_URL}
       FILE_STORAGE_DIRECTORY: ${FILE_STORAGE_DIRECTORY}
     depends_on:
         - postgres
-  
+
   postgres:
     image: postgres:17.3
     container_name: postgres
@@ -22,4 +22,4 @@
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-        - "5432:5432"
+        - ${POSTGRES_HOST_PORT}:${POSTGRES_PORT}
