fix: migration script

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,13 @@ POSTGRES_HOST_PORT=15432
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgres"
 POSTGRES_DB="postgres"
+
+#Used by CryTraCtor application
 DATABASE_URL="Server=${POSTGRES_HOST};Port=${POSTGRES_PORT};Database=${POSTGRES_DB};User Id=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};"
 
 #CryTraCtor Configuration
 FILE_STORAGE_DIRECTORY=MyStoredFiles
+
+#Used in migrate script
+LOCAL_HOST_NAME="localhost" #name resolution is not available outside the Docker network
+DATABASE_CONNECTION_STRING="Server=${LOCAL_HOST_NAME};Port=${POSTGRES_HOST_PORT};Database=${POSTGRES_DB};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}"
