--- a/src/CryTraCtor.WebApp/Properties/launchSettings.json
+++ b/src/CryTraCtor.WebApp/Properties/launchSettings.json
@@ -5,7 +5,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "http://localhost:5261",
+        "applicationUrl": "http://0.0.0.0:5261",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
@@ -14,7 +14,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "https://localhost:7006;http://localhost:5261",
+        "applicationUrl": "https://0.0.0.0:7006;http://0.0.0.0:5261",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
