--- a/src/CryTraCtor.WebApp/CryTraCtor.WebApp.csproj
+++ b/src/CryTraCtor.WebApp/CryTraCtor.WebApp.csproj
@@ -18,4 +18,9 @@
       <Link>.dockerignore</Link>
     </Content>
   </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\CryTraCtor.Business\CryTraCtor.Business.csproj" />
+  </ItemGroup>
 </Project>
