fix: mapping the entire folder structure to the volume seems to mess everything up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@
         FILE_STORAGE_DIRECTORY: ${FILE_STORAGE_DIRECTORY}
       depends_on:
         - crytractor.postgres
-      volumes:
-        - .:/src
+#      volumes:
+#        - .:/src
 
 
   crytractor.postgres:
