--- a/src/CryTraCtor.WebApp/Properties/launchSettings.json
+++ b/src/CryTraCtor.WebApp/Properties/launchSettings.json
@@ -7,7 +7,8 @@
         "launchBrowser": true,
         "applicationUrl": "http://0.0.0.0:5261",
         "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Development",
+          "DATABASE_URL": "Server=localhost;Port=15432;Database=postgres;User Id=postgres;Password=postgres;"
         }
       },
       "https": {
@@ -16,7 +17,8 @@
         "launchBrowser": true,
         "applicationUrl": "https://0.0.0.0:7006;http://0.0.0.0:5261",
         "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Development",
+          "DATABASE_URL": "Server=localhost;Port=15432;Database=postgres;User Id=postgres;Password=postgres;"
         }
       }
     }
