--- a/src/CryTraCtor.WebApp/appsettings.Development.json
+++ b/src/CryTraCtor.WebApp/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "FileUpload": {
+    "MaxFileSizeInMb": 2000
+  },
+  "AllowedHosts": "*",
+  "serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
   }
 }
