--- a/src/CryTraCtor.WebApp/appsettings.json
+++ b/src/CryTraCtor.WebApp/appsettings.json
@@ -1,12 +1,15 @@
 {
-  "FileUploadOptions": {
-    "MaxFileSizeInMb": 20
+  "FileUpload": {
+    "MaxFileSizeInMb": 2000
   },
-  "Logging": {
-    "LogLevel": {
+  "AllowedHosts": "*",
+  "serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
