--- a/src/CryTraCtor.Packet/CryTraCtor.Packet.csproj
+++ b/src/CryTraCtor.Packet/CryTraCtor.Packet.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="KaitaiStruct.Runtime.CSharp" Version="0.10.0" />
+      <PackageReference Include="PacketDotNet" Version="1.4.7" />
       <PackageReference Include="SharpPcap" Version="6.3.0" />
     </ItemGroup>
 
