--- a/src/CryTraCtor.Business/CryTraCtor.Business.csproj
+++ b/src/CryTraCtor.Business/CryTraCtor.Business.csproj
@@ -15,4 +15,8 @@
       <PackageReference Include="CsvHelper" Version="33.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Installers\" />
+    </ItemGroup>
+
 </Project>
