--- a/src/CryTraCtor.Packet/CryTraCtor.Packet.csproj
+++ b/src/CryTraCtor.Packet/CryTraCtor.Packet.csproj
@@ -8,7 +8,11 @@
 
     <ItemGroup>
       <PackageReference Include="KaitaiStruct.Runtime.CSharp" Version="0.10.0" />
+      <PackageReference Include="NBitcoin" Version="8.0.8" />
       <PackageReference Include="PacketDotNet" Version="1.4.7" />
+      <PackageReference Include="packetnet-connections" Version="1.3.0" />
+      <PackageReference Include="PcapDotNet.Base" Version="1.0.4.1" />
+      <PackageReference Include="PcapDotNet.Packets" Version="1.0.4.1" />
       <PackageReference Include="SharpPcap" Version="6.3.0" />
     </ItemGroup>
 
