--- a/src/CryTraCtor.Business/CryTraCtor.Business.csproj
+++ b/src/CryTraCtor.Business/CryTraCtor.Business.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="CsvHelper" Version="33.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.4" />
     </ItemGroup>
 
     <ItemGroup>
