--- a/src/CryTraCtor.WebApp/Properties/launchSettings.json
+++ b/src/CryTraCtor.WebApp/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "applicationUrl": "http://0.0.0.0:5261",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development",
-          "DATABASE_URL": "Server=localhost;Port=15432;Database=postgres;User Id=postgres;Password=postgres;"
+          "DATABASE_URL": "Server=crytractor.postgres;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
         }
       },
       "https": {
@@ -18,7 +18,7 @@
         "applicationUrl": "https://0.0.0.0:7006;http://0.0.0.0:5261",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development",
-          "DATABASE_URL": "Server=localhost;Port=15432;Database=postgres;User Id=postgres;Password=postgres;"
+          "DATABASE_URL": "Server=crytractor.postgres;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
         }
       }
     }
